<resources>
    <string name="app_name">Smart Medical</string>
    <string name="createdBy">Created by GSEII2 Students</string>
    <string name="sign_up">S\'inscrire</string>
    <string name="log_in">S\'identifier</string>
    <string name="first_name">Prénom</string>
    <string name="last_name">Nom</string>
    <string name="email">E-mail</string>
    <string name="password">Mot de passe</string>
    <string name="welcome">Bienvenue</string>
    <string name="already_user">Déjà Utilisateur?</string>
    <string name="email_error">E-mail non valide ou existe dèjà!</string>
    <string name="fill_info">Veuillez completer vos données</string>
    <string name="weight">Poids (kg)</string>
    <string name="height">Taille (cm)</string>
    <string name="sexe">Sexe</string>
    <string name="chronic_disease">Avez-vous une maladie chronique?</string>
    <string name="phone_number">Téléphone</string>
    <string name="validate">Valider</string>
    <string name="male">Homme</string>
    <string name="female">Femme</string>
    <string name="temp">Température</string>
    <string name="battement">BPM</string>
    <string name="forget_password"><u>Mot de passe oublié?</u></string>
    <string name="new_user">Nouveau Utilisateur?</string>
    <string name="login_error">E-mail et/ou mot de passe erroné(s).</string>
    <string name="blood_type">Groupe Sanguin</string>
    <string-array name="blood_types">
        <item>Inconnu</item>
        <item>O-</item>
        <item>O+</item>
        <item>A-</item>
        <item>A+</item>
        <item>B-</item>
        <item>B+</item>
        <item>AB-</item>
        <item>AB+</item>
    </string-array>
</resources>
