<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    tools:context=".UserInfoActivity">

    <FrameLayout
        android:id="@+id/topImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            app:srcCompat="@drawable/red_bg" />

        <ImageView
            android:layout_margin="8dp"
            android:layout_gravity="end"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/logo"/>

    </FrameLayout>



    <TextView
        android:id="@+id/infoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/topImage"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/solway"
        android:text="@string/fill_info"
        android:textColor="#000"
        android:textSize="20sp"
        android:textStyle="bold" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_below="@id/infoText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:src="@drawable/avatar"
        app:civ_border_color="#FF000000"
        app:civ_border_width="2dp" />

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile_image"
        android:layout_marginTop="32dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/weight"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_corners_button"
            android:hint="@string/weight"
            android:inputType="numberDecimal"
            android:paddingStart="8dp"
            android:textColorHint="#DDD" />

        <EditText
            android:id="@+id/height"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_corners_button"
            android:hint="@string/height"
            android:inputType="numberDecimal"
            android:paddingStart="8dp"
            android:textColorHint="#DDD" />

    </LinearLayout>

    <EditText
        android:id="@+id/phone_number"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_below="@id/linear"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rounded_corners_button"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:paddingStart="8dp"
        android:textColorHint="#DDD" />


    <LinearLayout
        android:id="@+id/linear2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/phone_number"
        android:layout_marginTop="32dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/infoSexe"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/solway"
            android:gravity="end"
            android:text="@string/sexe"
            android:textColor="#000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/sexeRB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:buttonTint="#a71930"
                android:fontFamily="@font/solway"
                android:text="@string/male"
                android:textColor="#000" />

            <RadioButton
                android:id="@+id/female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="#a71930"
                android:fontFamily="@font/solway"
                android:text="@string/female"
                android:textColor="#000" />

        </RadioGroup>

    </LinearLayout>

    <Spinner
        android:id="@+id/bloodType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear2"
        android:layout_marginTop="24dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:entries="@array/blood_types"
        android:spinnerMode="dialog"
        android:prompt="@string/blood_type"
        android:backgroundTint="#000"
        />

    <Button
        android:id="@+id/validate"
        android:onClick="validate"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/bloodType"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:background="@drawable/rounded_corners_button"
        android:text="@string/validate"
        android:textColor="#fff" />


</RelativeLayout>