<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="3">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_login" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="16dp"
                    android:src="@drawable/logo" />

                <TextView
                    android:id="@+id/welcome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:fontFamily="@font/solway"
                    android:text="@string/welcome"
                    android:textColor="@android:color/white"
                    android:textSize="40sp" />

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/rounded_corners"
                    android:hint="@string/email"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:inputType="textEmailAddress"
                    android:textColor="#fff"
                    android:textColorHint="#ddd" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/rounded_corners"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingStart="10dp"
                    android:paddingLeft="10dp"
                    android:textColor="#fff"
                    android:textColorHint="#ddd" />

                <Button
                    android:id="@+id/login"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="48dp"
                    android:onClick="login"
                    android:background="@drawable/rounded_corners_button"
                    android:fontFamily="@font/solway"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:text="@string/log_in"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/forgetPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:clickable="true"
                    android:fontFamily="@font/solway"
                    android:text="@string/forget_password"
                    android:textColor="#fff" />

                <TextView
                    android:id="@+id/error"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_horizontal"
                    android:fontFamily="@font/solway"
                    android:text="@string/login_error"
                    android:textColor="#b00020"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:visibility="invisible" />

            </LinearLayout>

        </FrameLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/newUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/solway"
                android:text="@string/new_user"
                android:textColor="#444"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/sign_up"
                android:layout_width="150dp"
                android:onClick="toSignUp"
                android:layout_height="wrap_content"
                android:layout_below="@id/newUser"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:background="@drawable/rounded_corners_button"
                android:text="@string/sign_up"
                android:textColor="#fff" />

        </RelativeLayout>
    </LinearLayout>


</RelativeLayout>