<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    tools:context=".SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="4">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_login" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="16dp"
                    android:src="@drawable/logo" />

                <TextView
                    android:id="@+id/welcome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/logo"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="16dp"
                    android:fontFamily="@font/solway"
                    android:text="@string/welcome"
                    android:textColor="#fff"
                    android:textSize="40sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/linear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/welcome"
                    android:layout_marginTop="24dp"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/first_name"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="1"
                        android:background="@drawable/rounded_corners"
                        android:hint="@string/first_name"
                        android:inputType="textPersonName"
                        android:paddingStart="8dp"
                        android:textColorHint="#DDD" />

                    <EditText
                        android:id="@+id/last_name"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="16dp"
                        android:layout_weight="1"
                        android:background="@drawable/rounded_corners"
                        android:hint="@string/last_name"
                        android:inputType="textPersonName"
                        android:paddingStart="8dp"
                        android:textColorHint="#DDD" />

                </LinearLayout>

                <EditText
                    android:id="@+id/email"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_below="@id/linear"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="28dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/rounded_corners"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:paddingStart="8dp"
                    android:textColorHint="#DDD" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_below="@id/email"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="28dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/rounded_corners"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingStart="8dp"
                    android:textColorHint="#DDD" />

                <Button
                    android:onClick="signup"
                    android:id="@+id/sign_up"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/password"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="48dp"
                    android:background="@drawable/rounded_corners_button"
                    android:text="@string/sign_up"
                    android:textColor="#fff" />

                <TextView
                    android:id="@+id/error"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="36dp"
                    android:fontFamily="@font/solway"
                    android:text="@string/email_error"
                    android:textColor="#b00020"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:visibility="invisible"/>

            </RelativeLayout>

        </FrameLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/alreadyUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/solway"
                android:text="@string/already_user"
                android:textColor="#444"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/login"
                android:onClick="toLogin"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/alreadyUser"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:background="@drawable/rounded_corners_button"
                android:text="@string/log_in"
                android:textColor="#fff" />

        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>